# nrf52833-experiments

./: Cargo.toml  LICENSE  README.md  jlinkgdb
.cargo/: config
microbit/: Cargo.toml
microbit/.cargo/: config
microbit/examples/: microbit-ccmstar.rs  microbit-listener.rs
nrf52833-dk/: Cargo.toml  Embed.toml
nrf52833-dk/.cargo/: config
nrf52833-dk/examples/: blinky.rs  display.rs  listener.rs
nrf52833-dk/src/: extended_enum.rs  lib.rs  main.rs  spi.rs  st7735s.rs
psila-microbit/: Cargo.toml
psila-microbit/.cargo/: config
psila-microbit/examples/: microbit-ccmstar.rs  microbit-light.rs  microbit-listener.rs
utilities/: Cargo.toml
utilities/src/: extended_enum.rs  lib.rs  spi.rs  st7735s.rs
