[package]
name = "microbit"
version = "0.0.1"
authors = [
    "Erik Svensson <erik.public@gmail.com>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
nrf52833-pac = "0.12"
nrf52833-hal = "0.16"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
bbqueue = "0.5"
ieee802154 = { git = "https://github.com/blueluna/ieee-802.15.4.git" }
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["52833"] }
psila-data = { git = "https://github.com/blueluna/psila.git", features = ["core"] }
aes = { version = "0.8" }
ccm = { version = "0.5", default-features = false }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[features]
