[package]
name = "nrf52833-dk"
version = "0.0.1"
authors = [
    "Erik Svensson <erik.public@gmail.com>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
nrf52833-pac = { git = "https://github.com/nrf-rs/nrf52833-pac.git" }
nrf52833-hal = { git = "https://github.com/nrf-rs/nrf-hal.git" }
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
cortex-m-rtfm = "0.5"
embedded-graphics = "0.6"
profont = "0.4.0"
rtt-target = { version = "0.2", features = ["cortex-m"] }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"