[package]
name = "psila-microbit"
version = "0.0.1"
authors = [
    "Erik Svensson <erik.public@gmail.com>"
    ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
nrf52833-pac = "0.12"
nrf52833-hal = "0.16"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
bbqueue = "0.5"
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
byteorder = { version = "1", default-features = false }
ieee802154 = { git = "https://github.com/blueluna/ieee-802.15.4.git" }
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["microbit"] }
psila-data = { git = "https://github.com/blueluna/psila.git", features = ["core"] }
psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-service = { git = "https://github.com/blueluna/psila.git", features = ["core", "defmt"] }
psila-crypto-rust-crypto = { git = "https://github.com/blueluna/psila.git" }
aes = { version = "0.8" }
ccm = { version = "0.5", default-features = false }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
microbit-v2 = "0.13.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[features]
