[package]
name = "utilities"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
nrf52833-hal = { git = "https://github.com/nrf-rs/nrf-hal.git" }
embedded-graphics = "0.6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"
