[package]
name = "utilities"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
nrf52833-hal = "0.16"
embedded-graphics = "0.6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"
